fix: isolate symbols and support partial fills in synthetic gateway